--- a/app_pisos/index.html
+++ b/app_pisos/index.html
@@ -121,7 +121,7 @@
                 if (prediccion < 1000) {
                     window.location.href = "soyapangoCity.html?precio=" + prediccion;
                 } else if (prediccion > 1000) {
-                    window.location.href = "soyapangoCity.html?precio=" + prediccion;
+                    window.location.href = "zonaRosaCity.html?precio=" + prediccion;
                 } else {
                     document.getElementById("resultado").innerHTML = "Precio: " + prediccion + " $ al mes";
                 }
