--- a/app_pisos/soyapangoCity.html
+++ b/app_pisos/soyapangoCity.html
@@ -1,22 +1,128 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Soyapango San Salvador</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-</head>
-<body>
+    <title>Colonia Soyapangocity</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <style>
+        /* Estilos generales */
+        body {
+            font-family: 'Poppins', sans-serif;
+            background-color: #f0f4f8; /* Color de fondo más claro */
+            color: #333; /* Color de texto */
+        }
 
+        /* Contenedor principal */
+        .container {
+            background-color: #ffffff; /* Fondo blanco */
+            border-radius: 10px;
+            padding: 30px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1); /* Sombra para darle profundidad */
+            margin-top: 50px;
+        }
+
+        /* Tarjetas */
+        .card {
+            border-radius: 10px;
+            overflow: hidden;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1); /* Sombra para darle profundidad */
+            margin-bottom: 20px; /* Espacio entre tarjetas */
+        }
+
+        /* Estilos de imagen */
+        .img-fluid {
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+       }
+
+/* Efecto de hover sobre la imagen */
+           .img-fluid:hover {
+    transform: scale(1.05) rotate(-2deg); /* Pequeña rotación para un efecto más dinámico */
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); /* Sombra para dar un efecto de elevación */
+     }
+
+
+        /* Títulos */
+        .card-title {
+            font-size: 20px;
+            font-weight: 600;
+        }
+
+        /* Textos */
+        .card-text {
+            font-size: 16px;
+        }
+
+        /* Botones */
+        .btn-primary {
+            background-color: #007bff;
+            border-color: #007bff;
+        }
+
+        .btn-primary:hover {
+            background-color: #0056b3;
+            border-color: #0056b3;
+        }
+    </style>
+</head>
+
+<body>
     <div class="container">
-        <h2 class="text-center">Casas economicas</h2>
+        <h2 class="text-center">Colonia Soyapangocity</h2>
+        <p class="text-center">Esta colonia está ubicada en Soyapango, conocida por sus colonias en evolución. Alquiler de viviendas cómodas y accesibles, libre de violencia, con tiendas, restaurantes y canchas de fútbol.</p>
+        <div style="position: relative; width: 100%; height: 0; padding-top: 56.2225%;
+ padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+ border-radius: 8px; will-change: transform;">
+  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGDikgG3Qo&#x2F;v7ggUvtClaeykbC8e_tbAg&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+  </iframe>
+</div>
+<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGDikgG3Qo&#x2F;v7ggUvtClaeykbC8e_tbAg&#x2F;view?utm_content=DAGDikgG3Qo&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener"></a>
+
+<div style="position: relative; width: 100%; height: 0; padding-top: 177.7778%;
+ padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+ border-radius: 8px; will-change: transform;">
+  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGDiuXq3LU&#x2F;BVUIhNm7Wvd7KowUiIezFw&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+  </iframe>
+</div>
+<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGDiuXq3LU&#x2F;BVUIhNm7Wvd7KowUiIezFw&#x2F;view?utm_content=DAGDiuXq3LU&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Historia para Instagram Alquiler Inmobilis</a> de Alex Antonio Garcia Landaverde
         <div class="row mt-5">
-            <div class="col-md-6">
-                <img src="imagen_referencia_1.jpg" class="img-fluid" alt="Imagen de referencia 1">
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="Image/Kj0WWEPawtibM0bh.png" class="img-fluid" alt="Pequeña casa acogedora en alquiler">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Pequeña casa acogedora en alquiler</h5>
+                        <p class="card-text text-center">Ideal para una persona o pareja que busca un lugar acogedor y económico para vivir.</p>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-6">
-                <img src="imagen_referencia_2.jpg" class="img-fluid" alt="Imagen de referencia 2">
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="Image/QtcdRSPLdTTPupPU.png" class="img-fluid" alt="Disfrute de la serenidad del hogar">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Disfrute de la serenidad del hogar</h5>
+                        <p class="card-text text-center">Esta encantadora casa cuenta con un hermoso patio perfecto para relajarse.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="Image/Gix5dmDfEoByoUof.png" class="img-fluid" alt="La casa de sus sueños le espera">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">La casa de sus sueños le espera</h5>
+                        <p class="card-text text-center">Oportunidad excepcional de hacer suya o alquilar esta casa encantadora y accesible.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row mt-5">
+            <div class="col-md-12">
+                <h4 class="text-center">Precio: $<span id="precio-mes"></span> al mes</h4>
+                <p class="text-center">Espaciosa casa en Soyapangocity con todas las comodidades necesarias.</p>
             </div>
         </div>
         <div class="text-center mt-5">
@@ -24,5 +130,12 @@
         </div>
     </div>
 
+    <script>
+        const urlParams = new URLSearchParams(window.location.search);
+        const precio = urlParams.get('precio');
+        document.getElementById("precio-mes").innerText = precio;
+    </script>
 </body>
+
 </html>
+
