--- a/app_pisos/html/soyapangoCity.html
+++ b/app_pisos/html/soyapangoCity.html
@@ -41,7 +41,7 @@
 /* Efecto de hover sobre la imagen */
            .img-fluid:hover {
     transform: scale(1.05) rotate(-2deg); /* Pequeña rotación para un efecto más dinámico */
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); /* Sombra para dar un efecto de elevación */
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); /* Sombra para dar un efecto de elevación mejor */
      }
 
 
