--- a/app_pisos/html/soyapangoCity.html
+++ b/app_pisos/html/soyapangoCity.html
@@ -89,7 +89,7 @@
     src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGDiuXq3LU&#x2F;BVUIhNm7Wvd7KowUiIezFw&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
   </iframe>
 </div>
-<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGDiuXq3LU&#x2F;BVUIhNm7Wvd7KowUiIezFw&#x2F;view?utm_content=DAGDiuXq3LU&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Historia para Instagram Alquiler Inmobilis</a> de Alex Antonio Garcia Landaverde
+<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGDiuXq3LU&#x2F;BVUIhNm7Wvd7KowUiIezFw&#x2F;view?utm_content=DAGDiuXq3LU&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener"></a>
         <div class="row mt-5">
             <div class="col-md-4">
                 <div class="card">
