--- a/app_pisos/html/soyapangoCity.html
+++ b/app_pisos/html/soyapangoCity.html
@@ -104,7 +104,7 @@
                 <div class="card">
                     <img src="Image/QtcdRSPLdTTPupPU.png" class="img-fluid" alt="Disfrute de la serenidad del hogar">
                     <div class="card-body">
-                        <h5 class="card-title text-center">Disfrute de la serenidad del hogar</h5>
+                        <h5 class="card-title text-center">Disfrute, de la serenidad del hogar</h5>
                         <p class="card-text text-center">Esta encantadora casa cuenta con un hermoso patio perfecto para relajarse.</p>
                     </div>
                 </div>
