--- a/app_pisos/html/soyapangoCity.html
+++ b/app_pisos/html/soyapangoCity.html
@@ -72,7 +72,7 @@
 <body>
     <div class="container">
         <h2 class="text-center">Colonia Soyapangocity</h2>
-        <p class="text-center">Esta colonia está ubicada en Soyapango, conocida por sus colonias en evolución. Alquiler de viviendas cómodas y accesibles, libre de violencia, con tiendas, restaurantes y canchas de fútbol.</p>
+        <p class="text-center">Esta colonia, está ubicada en Soyapango, conocida por sus colonias en evolución. Alquiler de viviendas cómodas y accesibles, libre de violencia, con tiendas, restaurantes y canchas de fútbol.</p>
         <div class="row mt-5">
             <div class="col-md-4">
                 <div class="card">
