--- a/app_pisos/html/soyapangoCity.html
+++ b/app_pisos/html/soyapangoCity.html
@@ -23,6 +23,11 @@
             <a href="index.html" class="btn btn-primary">Volver</a>
         </div>
     </div>
+</div>
+<div class="text-center mt-5">
+    <a href="index.html" class="btn btn-primary">Volver</a>
+</div>
+</div>
 
 </body>
 </html>
