--- a/app_pisos/soyapangoCity.html
+++ b/app_pisos/soyapangoCity.html
@@ -41,7 +41,7 @@
 /* Efecto de hover sobre la imagen */
            .img-fluid:hover {
     transform: scale(1.05) rotate(-2deg); /* Pequeña rotación para un efecto más dinámico */
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); /* Sombra para dar un efecto de elevación mejor */
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); /* Sombra para dar un efecto de elevación */
      }
 
 
@@ -72,7 +72,24 @@
 <body>
     <div class="container">
         <h2 class="text-center">Colonia Soyapangocity</h2>
-        <p class="text-center">Esta colonia, está ubicada en Soyapango, conocida por sus colonias en evolución. Alquiler de viviendas cómodas y accesibles, libre de violencia, con tiendas, restaurantes y canchas de fútbol.</p>
+        <p class="text-center">Esta colonia está ubicada en Soyapango, conocida por sus colonias en evolución. Alquiler de viviendas cómodas y accesibles, libre de violencia, con tiendas, restaurantes y canchas de fútbol.</p>
+        <div style="position: relative; width: 100%; height: 0; padding-top: 56.2225%;
+ padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+ border-radius: 8px; will-change: transform;">
+  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGDikgG3Qo&#x2F;v7ggUvtClaeykbC8e_tbAg&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+  </iframe>
+</div>
+<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGDikgG3Qo&#x2F;v7ggUvtClaeykbC8e_tbAg&#x2F;view?utm_content=DAGDikgG3Qo&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener"></a>
+
+<div style="position: relative; width: 100%; height: 0; padding-top: 177.7778%;
+ padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+ border-radius: 8px; will-change: transform;">
+  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGDiuXq3LU&#x2F;BVUIhNm7Wvd7KowUiIezFw&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+  </iframe>
+</div>
+<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGDiuXq3LU&#x2F;BVUIhNm7Wvd7KowUiIezFw&#x2F;view?utm_content=DAGDiuXq3LU&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Historia para Instagram Alquiler Inmobilis</a> de Alex Antonio Garcia Landaverde
         <div class="row mt-5">
             <div class="col-md-4">
                 <div class="card">
@@ -87,7 +104,7 @@
                 <div class="card">
                     <img src="Image/QtcdRSPLdTTPupPU.png" class="img-fluid" alt="Disfrute de la serenidad del hogar">
                     <div class="card-body">
-                        <h5 class="card-title text-center">Disfrute, de la serenidad del hogar</h5>
+                        <h5 class="card-title text-center">Disfrute de la serenidad del hogar</h5>
                         <p class="card-text text-center">Esta encantadora casa cuenta con un hermoso patio perfecto para relajarse.</p>
                     </div>
                 </div>
