--- a/app_pisos/html/index.html
+++ b/app_pisos/html/index.html
@@ -1,138 +1,173 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alquiler San Salvador</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="styleIndex.css">
+    <link href="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+    <!-- Make sure you put this AFTER Leaflet's CSS -->
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
     <style>
-        body {
-            background-color: #b9babb;
+        #map {
+            height: 400px;
         }
-        .container {
-            background-color: rgba(255, 255, 255, 0.9);
-            border-radius: 10px;
-            padding: 30px;
-            margin-top: 50px;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
-        }
-        h4 {
-            color: #3498db;
-            margin-bottom: 20px;
-        }
-        label {
-            font-weight: bold;
-        }
-        button {
-            margin-top: 20px;
-        }
-        #resultado {
-            margin-top: 20px;
-            font-size: 1.2em;
-        }
-        
     </style>
 </head>
+
 <body>
-    <div class="container">
-        <div class="row justify-content-center">
+    <div class="container mt-5">
+        <div class="row justify-content">
             <div class="col-md-6">
-                <h4 class="text-center">Alquiler San Salvador</h4>
-
-                <div class="card shadow">
+                <h4 class="text-center mb-4 label-highlight">Tú mejor opción del alquiler en El Salvador</h4>
+                <div class="card shadow-lg">
                     <div class="card-body">
-                        <label for="m2">M<sup>2</sup></label>
-                        <input type="number" class="form-control mb-3" id="m2">
-
-                        <label for="hab">Nº de habitaciones</label>
-                        <input type="number" class="form-control mb-3" id="hab">
-
-                        <label for="planta">Nº de planta</label>
-                        <input type="number" class="form-control mb-3" id="planta">
-
-                        <label for="ascensor">Ascensor</label>
-                        <select id="ascensor" class="form-control mb-3">
-                            <option disabled selected>Elige una opción...</option>
-                            <option value="0">No</option>
-                            <option value="1">Sí</option>
-                        </select>
-
-                        <label for="ext">Exterior</label>
-                        <select id="ext" class="form-control mb-3">
-                            <option disabled selected>Elige una opción...</option>
-                            <option value="0">No</option>
-                            <option value="1">Sí</option>
-                        </select>
-
-                        <label for="est">Estado</label>
-                        <select id="est" class="form-control mb-3">
-                            <option disabled selected>Elige una opción...</option>
-                            <option value="0">No rehabilitado</option>
-                            <option value="1">Rehabilitado</option>
-                            <option value="2">Nuevo</option>
-                        </select>
-
-                        <label for="cent">Céntrico</label>
-                        <select id="cent" class="form-control mb-3">
-                            <option disabled selected>Elige una opción...</option>
-                            <option value="0">No</option>
-                            <option value="1">Sí</option>
-                        </select>
-
-                        <div class="text-center">
-                            <button class="btn btn-primary" type="button" id="btn">Calcular precio</button>
-                            <h5 id="resultado"></h5>
-                        </div>
+                        <form id="rental-form">
+                            <div class="mb-3">
+                                <label for="m2" class="form-label">
+                                    <i class="fas fa-ruler-combined"></i> Metros cuadrados
+                                </label>
+                                <select id="m2" class="form-select rounded-input" required>
+                                    <option disabled selected>Elige una opción...</option>
+                                    <option value="5">5 Metros cuadrados</option>
+                                    <option value="10">10 Metros cuadrados</option>
+                                    <option value="15">15 Metros cuadrados</option>
+                                    <option value="20">20 Metros cuadrados</option>
+                                    <option value="25">25 Metros cuadrados</option>
+                                    <option value="30">30 Metros cuadrados</option>
+                                    <option value="35">35 Metros cuadrados</option>
+                                    <option value="40">40 Metros cuadrados</option>
+                                    <option value="45">45 Metros cuadrados</option>
+                                    <option value="50">50 Metros cuadrados</option>
+                                </select>
+                            </div>
+                            <div class="mb-3">
+                                <label for="hab" class="form-label">
+                                    <i class="fas fa-bed"></i> Nº de habitaciones
+                                </label>
+                                <input type="number" class="form-control rounded-input" id="hab" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="planta" class="form-label">
+                                    <i class="fas fa-building"></i> Nº de planta
+                                </label>
+                                <input type="number" class="form-control rounded-input" id="planta" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="ascensor" class="form-label">
+                                    <i class="fas fa-elevator"></i> Ascensor
+                                </label>
+                                <select id="ascensor" class="form-select rounded-input" required>
+                                    <option disabled selected>Elige una opción...</option>
+                                    <option value="0">No</option>
+                                    <option value="1">Sí</option>
+                                </select>
+                            </div>
+                            <div class="mb-3">
+                                <label for="ext" class="form-label">
+                                    <i class="fas fa-sun"></i> Exterior
+                                </label>
+                                <select id="ext" class="form-select rounded-input" required>
+                                    <option disabled selected>Elige una opción...</option>
+                                    <option value="0">No</option>
+                                    <option value="1">Sí</option>
+                                </select>
+                            </div>
+                            <div class="mb-3">
+                                <label for="est" class="form-label">
+                                    <i class="fas fa-tools"></i> Estado
+                                </label>
+                                <select id="est" class="form-select rounded-input" required>
+                                    <option disabled selected>Elige una opción...</option>
+                                    <option value="0">No rehabilitado</option>
+                                    <option value="1">Rehabilitado</option>
+                                    <option value="2">Nuevo</option>
+                                </select>
+                            </div>
+                            <div class="mb-3">
+                                <label for="map" class="form-label">
+                                    <i class="fas fa-map-marker-alt"></i> Lugar de alquiler
+                                </label>
+                                <div id="map"></div>
+                                <input type="hidden" id="cent" name="cent">
+                            </div>
+                            <div class="text-center">
+                                <button class="btn btn-primary w-100" type="button" id="btn">Calcular precio</button>
+                                <h5 id="resultado" class="mt-3"></h5>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.0.0/dist/tf.min.js"></script>
-
     <script>
+        var map = L.map('map').setView([13.6929403, -89.2181911], 13);
 
-        var modelo = null;
-        //Cargamos el modelo entrenado
-        (async() =>{
-            console.log("Cargando el modelo...");
-            modelo = await tf.loadLayersModel("model.json");
-            console.log("Modelo cargado!");
-        })();
+        L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+            maxZoom: 18,
+            attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+        }).addTo(map);
 
-        const btn = document.getElementById("btn");
+        var marker;
 
-        btn.onclick = () =>{
-            var m2 = document.getElementById('m2').value;
-            var hab = document.getElementById('hab').value;
-            var planta = document.getElementById('planta').value;
-            var ascensor = document.getElementById('ascensor').value;
-            var ext = document.getElementById('ext').value;
-            var est = document.getElementById('est').value;
-            var cent = document.getElementById('cent').value;
+        map.on('click', function (e) {
+            var latlng = e.latlng;
 
-            if (modelo != null) {
-                var tensor = tf.tensor2d([[0, parseInt(m2), parseInt(hab), parseInt(planta), parseInt(ascensor), parseInt(ext), parseInt(est), parseInt(cent)]])
-                var prediccion = modelo.predict(tensor).dataSync();
-                prediccion = Math.round(prediccion, 2)
-
-                if (prediccion < 1000) {
-                    window.location.href = "soyapangoCity.html?precio=" + prediccion;
-                } else if (prediccion > 1000) {
-                    window.location.href = "zonaRosaCity.html?precio=" + prediccion;
-                } else {
-                    document.getElementById("resultado").innerHTML = "Precio: " + prediccion + " $ al mes";
-                }
+            if (marker) {
+                marker.setLatLng(latlng);
             } else {
-                document.getElementById("resultado").innerHTML = "No se puede ejecutar, hay un problema";
+                marker = L.marker(latlng).addTo(map);
             }
+
+            document.getElementById('cent').value = latlng.lat + ',' + latlng.lng;
+        });
+    </script>
+
+<script>
+
+    var modelo = null;
+    //Cargamos el modelo entrenado
+    (async () => {
+        console.log("Cargando el modelo...");
+        modelo = await tf.loadLayersModel("model.json");
+        console.log("Modelo cargado!");
+    })();
+
+    const btn = document.getElementById("btn");
+
+    btn.onclick = () => {
+        var m2 = document.getElementById('m2').value;
+        var hab = document.getElementById('hab').value;
+        var planta = document.getElementById('planta').value;
+        var ascensor = document.getElementById('ascensor').value;
+        var ext = document.getElementById('ext').value;
+        var est = document.getElementById('est').value;
+        var cent = document.getElementById('cent').value;
+
+        if (modelo != null) {
+            var tensor = tf.tensor2d([[0, parseInt(m2), parseInt(hab), parseInt(planta), parseInt(ascensor), parseInt(ext), parseInt(est), parseInt(cent)]])
+            var prediccion = modelo.predict(tensor).dataSync();
+            prediccion = Math.round(prediccion, 2)
+
+            if (prediccion < 1000) {
+                window.location.href = "soyapangoCity.html?precio=" + prediccion;
+            } else if (prediccion > 1000) {
+                window.location.href = "zonaRosaCity.html?precio=" + prediccion;
+            } else {
+                document.getElementById("resultado").innerHTML = "Precio: " + prediccion + " $ al mes";
+            }
+        } else {
+            document.getElementById("resultado").innerHTML = "No se puede ejecutar, hay un problema";
         }
+    }
 
-            </script>
-    
+</script>
+
 </body>
+
 </html>
-
-
