--- a/app_pisos/html/index.html
+++ b/app_pisos/html/index.html
@@ -127,6 +127,8 @@
             document.getElementById('cent').value = latlng.lat + ',' + latlng.lng;
         });
     </script>
+    
+         <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.0.0/dist/tf.min.js"></script>
 
 <script>
 
