--- a/app_pisos/html/ahuachapánCity.html
+++ b/app_pisos/html/ahuachapánCity.html
@@ -13,8 +13,7 @@
 </head>
 <body>
     <div class="container">
-        <h2 class="text-center">Colonia Soyapangocity</h2>
-        <p class="text-center">Esta colonia, está ubicada en Soyapango, conocida por sus colonias en evolución. Alquiler de viviendas cómodas y accesibles, libre de violencia, con tiendas, restaurantes y canchas de fútbol.</p>
+        <h2 class="text-center">Departamento Chalatenango</h2>
         <div class="row mt-5">
             <div class="col-md-4">
                 <div class="card">
@@ -245,7 +244,7 @@
         <div class="row mt-5">
             <div class="col-md-12">
                 <h4 class="text-center">Precio: $<span id="precio-mes"></span> al mes</h4>
-                <p class="text-center">Espaciosa casa en Soyapangocity con todas las comodidades necesarias.</p>
+                <p class="text-center">Espaciosa casa en Chalatenango con todas las comodidades necesarias.</p>
             </div>
         </div>
         <div class="text-center mt-5">
