--- a/app_pisos/html/chalatenangoCity.html
+++ b/app_pisos/html/chalatenangoCity.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="container">
-        <h2 class="text-center">Departamento Chalatenango</h2>
+        <h2 class="text-center">Departamento de Chalatenango</h2>
         <div class="row mt-5">
             <div class="col-md-4">
                 <div class="card">
