--- a/app_pisos/html/lalibertadCity.html
+++ b/app_pisos/html/lalibertadCity.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="container">
-        <h2 class="text-center">La Libertad</h2>
+        <h2 class="text-center">Departamento de la Libertad</h2>
         <div class="row mt-5">
             <div class="col-md-4">
                 <div class="card">
