--- a/app_pisos/html/morazánCity.html
+++ b/app_pisos/html/morazánCity.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="container">
-        <h2 class="text-center">Departamento Chalatenango</h2>
+        <h2 class="text-center">Departamento de Morazán</h2>
         <div class="row mt-5">
             <div class="col-md-4">
                 <div class="card">
@@ -244,7 +244,7 @@
         <div class="row mt-5">
             <div class="col-md-12">
                 <h4 class="text-center">Precio: $<span id="precio-mes"></span> al mes</h4>
-                <p class="text-center">Espaciosa casa en Chalatenango con todas las comodidades necesarias.</p>
+                <p class="text-center">Espaciosa casa en Morazán con todas las comodidades necesarias.</p>
             </div>
         </div>
         <div class="text-center mt-5">
