--- a/app_pisos/html/sansalvadorCity.html
+++ b/app_pisos/html/sansalvadorCity.html
@@ -1,92 +1,250 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Colonia San Benito</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <style>
-        body {
-            background-color: #b9babb; /* Color de fondo suave */
-            color: #030303; /* Color del texto */
-        }
-        
-
-        .container {
-            background-color: #b9babb; /* Color de fondo */
-            border-radius: 10px;
-            padding: 30px;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-            margin-top: 50px;
-        }
-
-        .img-fluid {
-            border-radius: 10px;
-            transition: transform 0.3s ease;
-        }
-
-        .img-fluid:hover {
-            transform: scale(1.05);
-        }
-
-        .card-title {
-            font-size: 24px;
-            font-weight: bold;
-        }
-
-        .card-text {
-            font-size: 18px;
-        }
-
-        .btn-primary {
-            background-color: #007bff;
-            border-color: #007bff;
-        }
-
-        .btn-primary:hover {
-            background-color: #0056b3;
-            border-color: #0056b3;
-        }
-    </style>
+    <title>Colonia Soyapangocity</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+   <link rel="stylesheet" href="style.css">
+  
 </head>
 <body>
     <div class="container">
-        <h2 class="text-center">Colonia San Benito</h2>
-        <p class="text-center">En esta colonia está ubicada la famosa Zona Rosa en San Salvador, que es conocida por el gran desarrollo arquitectónico con el que cuenta y por la variedad de proyectos inmobiliarios que prometen un mayor desarrollo en la Colonia San Benito. Invertir en esta zona exclusiva le asegurará contar con grandes ganancias, pues al estar llena de restaurantes, centros corporativos, cafés, centros comerciales, colegios, universidades, supermercados y demás, siempre existirán personas interesadas en rentar o comprar una propiedad en este sector. Además, es una zona muy segura y limpia en la que se puede vivir en un ambiente relajado y contar con un ritmo de vida tranquilo.</p>
+        <h2 class="text-center">Departamento de San Salvador</h2>
         <div class="row mt-5">
             <div class="col-md-4">
                 <div class="card">
-                    <img src="Image/img-1.png" class="img-fluid" alt="Imagen de referencia 1">
+                    <img src="Image/Kj0WWEPawtibM0bh.png" class="img-fluid" alt="Pequeña casa acogedora en alquiler">
                     <div class="card-body">
-                        <h5 class="card-title text-center">Casa vista panorámica</h5>
-                        <p class="card-text text-center">Disfruta de las hermosas vistas desde esta casa moderna.</p>
+                        <h5 class="card-title text-center">Pequeña casa acogedora en alquiler</h5>
+                        <p class="card-text text-center">Ideal para una persona o pareja que busca un lugar acogedor y económico para vivir.</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="Image/Captura de pantalla 2024-04-01 215003.png" class="img-fluid" alt="Imagen de referencia 3">
+                    <img src="Image/QtcdRSPLdTTPupPU.png" class="img-fluid" alt="Disfrute de la serenidad del hogar">
                     <div class="card-body">
-                        <h5 class="card-title text-center">Casa moderna</h5>
-                        <p class="card-text text-center">Una casa elegante y moderna que te sorprenderá.</p>
+                        <h5 class="card-title text-center">Disfrute, de la serenidad del hogar</h5>
+                        <p class="card-text text-center">Esta encantadora casa cuenta con un hermoso patio perfecto para relajarse.</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="Image/img-3.png" class="img-fluid" alt="Imagen de referencia 2">
+                    <img src="Image/Gix5dmDfEoByoUof.png" class="img-fluid" alt="La casa de sus sueños le espera">
                     <div class="card-body">
-                        <h5 class="card-title text-center">Apartamento lujosos</h5>
-                        <p class="card-text text-center">Descubre la comodidad y el lujo en estos apartamentos exclusivos.</p>
+                        <h5 class="card-title text-center">La casa de sus sueños le espera</h5>
+                        <p class="card-text text-center">Oportunidad excepcional de hacer suya o alquilar esta casa encantadora y accesible.</p>
                     </div>
                 </div>
             </div>
+
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="Image/OIP (1).jpg" class="img-fluid" alt="La casa de sus sueños le espera">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Encuentra tu hogar ideal, alquila una casa con nosotros</h5>
+                        <p class="card-text text-center">Da la bienvenida a un mundo de posibilidades donde cada casa es una invitación a vivir plenamente.</p>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="Image/OIP2.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Haz de cada viaje una experiencia inolvidable en una casa de alquiler</h5>
+                        <p class="card-text text-center"> Descubre un refugio donde puedas ser tú mismo y dejar atrás las preocupaciones del día a día.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="Image/OIP (3).jpg" class="img-fluid" alt="La casa de sus sueños le espera">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Tu hogar temporal te espera, con nosotros, ven y alquila hoy</h5>
+                        <p class="card-text text-center"> Experimenta la libertad de vivir sin ataduras en un espacio que se siente como tuyo desde el inicio.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="Image/OIP (4).jpg" class="img-fluid" alt="La casa de sus sueños le espera">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Descubre el confort de un hogar lejos de casa, alquila con nosotros</h5>
+                        <p class="card-text text-center"> Desde el primer paso hasta el último, sentirás que has encontrado tu lugar en el mundo.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="Image/OIP (5).jpg" class="img-fluid" alt="La casa de sus sueños le espera">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Tu próximo hogar está a solo un alquiler de distancia</h5>
+                        <p class="card-text text-center">Haz realidad tus sueños de un hogar perfecto en un lugar donde cada detalle está diseñado pensando en ti.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="Image/OIP.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Transforma cuatro paredes en tu hogar dulce hogar. ¡Encuéntralo aquí!</h5>
+                        <p class="card-text text-center">Desde la decoración hasta los pequeños detalles, cada casa es una tela en blanco esperandote.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="Image/A1.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Dale vida a tu espacio. ¡Alquila una de nuestras casas y hazla tuya!</h5>
+                        <p class="card-text text-center">Descubre un mundo de posibilidades donde cada espacio es una oportunidad para expresar tu estilo único.</p>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="Image/A2.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Donde los sueños encuentran su dirección</h5>
+                        <p class="card-text text-center">Con una variedad de opciones que se adaptan a todos los presupuestos y preferencias, encontrarás la llave de tu felicidad en nuestras manos expertas.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="Image/A3.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Haz realidad tus sueños de hogar. ¡Alquila con confianza!</h5>
+                        <p class="card-text text-center"> El hogar de tus sueños te espera a la vuelta de la esquina donde puedes encontrar tu felicidad junto a tu familia.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="Image/A4.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Tu hogar te está esperando. ¡Hazlo tuyo con nuestro servicio de alquiler!</h5>
+                        <p class="card-text text-center">Desde la primera visita, sentirás que has encontrado el lugar donde perteneces. ¡Hazlo tuyo y comienza a crear recuerdos inolvidables!</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="Image/A5.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Encuentra la comodidad que mereces. ¡Alquila tu próximo hogar con nosotros!</h5>
+                        <p class="card-text text-center"> Con una amplia gama de opciones que se adaptan a todos los estilos de vida, encontrarás el refugio perfecto para relajarte y recargarte.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="Image/A6.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Haz de cada espacio tu propio santuario. ¡Alquila una de nuestras casas!</h5>
+                        <p class="card-text text-center">Deja atrás el estrés del día a día y sumérgete en un mundo de confort y tranquilidad, con nuestras casas en alquiler.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="Image/A7.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Donde cada casa cuenta una historia. ¡Haz la tuya la próxima!</h5>
+                        <p class="card-text text-center"> Abre la puerta a un mundo de posibilidades donde la felicidad se encuentra en cada esquina.</p>
+                    </div>
+                </div>
+            </div>
+ 
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="Image/A8.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Descubre el placer de volver a casa.¡Encuentra tu alquiler perfecto!</h5>
+                        <p class="card-text text-center">Descubre una selección de casas que son mucho más que cuatro paredes.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="Image/A9.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Construyendo hogares, construyendo sueños</h5>
+                        <p class="card-text text-center">Da vida a tus sueños de un hogar ideal en un espacio que te inspire cada día de tu vida con toda tu familia. </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="Image/A10.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Bienvenido a tu próximo hogar</h5>
+                        <p class="card-text text-center">Encontrarás el espacio perfecto para crear recuerdos inolvidables.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="Image/A11.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Tu próximo hogar está a solo un paso de distancia</h5>
+                        <p class="card-text text-center">Encuentra el hogar que refleje tu estilo y se adapte a tus necesidades.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="Image/A12.jpg" class="img-fluid" alt="La casa de sus sueños le espera">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Encuentra tu refugio perfecto</h5>
+                        <p class="card-text text-center">Descubre un mundo de posibilidades para ti y tu linda familia.</p>
+                    </div>
+                </div>
+            </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         </div>
         <div class="row mt-5">
             <div class="col-md-12">
                 <h4 class="text-center">Precio: $<span id="precio-mes"></span> al mes</h4>
-                <p class="text-center">Espaciosa casa en la Zona Rosa con todas las comodidades necesarias.</p>
+                <p class="text-center">Espaciosa casa en San Salvador con todas las comodidades necesarias.</p>
             </div>
         </div>
         <div class="text-center mt-5">
@@ -95,11 +253,11 @@
     </div>
 
     <script>
-        // JavaScript para obtener el precio de la URL y mostrarlo en el elemento con el id "precio-mes"
         const urlParams = new URLSearchParams(window.location.search);
         const precio = urlParams.get('precio');
         document.getElementById("precio-mes").innerText = precio;
     </script>
 </body>
+
 </html>
 
